# vision-ai-agent

./: .gitignore  DEPLOY.md  Makefile  README.md  package.json  pnpm-lock.yaml
.claude/memory/: session-log.md
.claude/state/: session.json  skills-decision.json  tooling-policy.json
apps/api/: .dockerignore  Dockerfile  env.yaml  package.json  pyproject.toml
apps/api/src/: __init__.py  agent.py  config.py  main.py  object_detector.md  stream_client.py
apps/api/src/agents/: __init__.py  base_coach.py  script_coach.py  situation_coach.py
apps/api/src/data/scripts/: airport-checkin.json  cafe-order.json  hotel-checkin.json  job-interview.json  phone-call.json  restaurant-order.json  self-introduction.json
apps/api/src/models/: coach.py  script.py
apps/api/src/prompts/situations/: directions.md  hotel.md  restaurant.md  shopping.md
apps/api/src/routers/: __init__.py  coach.py
apps/web/: package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/coach/: layout.tsx  page.tsx
apps/web/src/app/coach/script/: page.tsx
apps/web/src/app/coach/script/[scriptId]/: page.tsx
apps/web/src/app/coach/situation/: page.tsx
apps/web/src/app/detect/: page.tsx
apps/web/src/app/yolo/: page.tsx
apps/web/src/components/: LocalVideoDetector.tsx  ObjectLabelOverlay.tsx  VideoCall.tsx  YoloOverlay.tsx
apps/web/src/components/coach/: CoachSession.tsx  ScriptSession.tsx
apps/web/src/hooks/: useObjectDetection.ts
apps/web/src/lib/: coach-api.ts  deepgram-voice-agent.ts  script-api.ts  stream.ts
docs/report/: voice-agent-research.md
(+1 files in other folders)
