[project]
name = "api"
version = "0.0.1"
description = "English Conversation Training API with Deepgram Voice Agent"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "deepgram-sdk>=4.0.0",
    "websockets>=12.0",
    "getstream>=2.5.0",
]

[project.optional-dependencies]
deepgram = [
    "deepgram-sdk>=4.0.0",
]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
